# raven

./: README.md
.archive/: db.ts  importer.ts  up.sql
cli/: Cargo.toml  bug_report.txt  raven.txt
cli/src/: main.rs
cli/src/client/: get.rs  hydrate.rs  import.rs  mod.rs  update.rs
cli/src/raven_cli/: args.rs  mod.rs  processor.rs
db/: up.sql
discord-service/: package.json
discord-service/src/: embed.ts  index.ts
discord/src/: embed.ts  index.ts  parser.ts
service/: .eslintrs.js  .gitignore  tsconfig.json
service/src/: index.ts
service/src/client/: db.ts  yahoo-finance.ts
service/src/data/import/: financials.ts  index.ts  profile.ts  shared.ts
service/src/data/raw/: financials.ts  historical-price-data.ts  index.ts  profile.ts
service/src/service/: importer.ts  loader.ts  update.ts
valuation-service/: package.json  tsconfig.json
valuation-service/src/: index.ts
valuation-service/src/client/: db.ts  yahoo-finance.ts
valuation-service/src/data/import/: financials.ts  historical-price-data.ts  index.ts  profile.ts  shared.ts
valuation-service/src/service/: evaluator.ts  importer.ts  loader.ts
