[package]
name = "raven"
version = "0.0.1"
edition = "2021"

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
home = "0.5.4"
regex = "1.7.1"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.93"
spinners = "4.1.0"
tokio = { version = "1", features = ["full"] }
